secure_com_node/build/log/idf_py_stdout_output_25014
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/build/bootloader/esp-idf/esptool_py && /home/fracchio/.espressif/python_env/idf5.2_py3.11_env/bin/python /home/fracchio/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/build/bootloader/bootloader.bin
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Building C object esp-idf/crypto_wrapper/CMakeFiles/__idf_crypto_wrapper.dir/crypto_wrapper.c.obj
FAILED: esp-idf/crypto_wrapper/CMakeFiles/__idf_crypto_wrapper.dir/crypto_wrapper.c.obj 
/home/fracchio/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.1-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/build/config -I/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/crypto_wrapper -I/home/fracchio/esp/esp-idf/components/newlib/platform_include -I/home/fracchio/esp/esp-idf/components/freertos/config/include -I/home/fracchio/esp/esp-idf/components/freertos/config/include/freertos -I/home/fracchio/esp/esp-idf/components/freertos/config/xtensa/include -I/home/fracchio/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/fracchio/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/fracchio/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/fracchio/esp/esp-idf/components/freertos/esp_additions/include -I/home/fracchio/esp/esp-idf/components/esp_hw_support/include -I/home/fracchio/esp/esp-idf/components/esp_hw_support/include/soc -I/home/fracchio/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/fracchio/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/fracchio/esp/esp-idf/components/heap/include -I/home/fracchio/esp/esp-idf/components/log/include -I/home/fracchio/esp/esp-idf/components/soc/include -I/home/fracchio/esp/esp-idf/components/soc/esp32s3 -I/home/fracchio/esp/esp-idf/components/soc/esp32s3/include -I/home/fracchio/esp/esp-idf/components/hal/platform_port/include -I/home/fracchio/esp/esp-idf/components/hal/esp32s3/include -I/home/fracchio/esp/esp-idf/components/hal/include -I/home/fracchio/esp/esp-idf/components/esp_rom/include -I/home/fracchio/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/fracchio/esp/esp-idf/components/esp_rom/esp32s3 -I/home/fracchio/esp/esp-idf/components/esp_common/include -I/home/fracchio/esp/esp-idf/components/esp_system/include -I/home/fracchio/esp/esp-idf/components/esp_system/port/soc -I/home/fracchio/esp/esp-idf/components/esp_system/port/include/private -I/home/fracchio/esp/esp-idf/components/xtensa/esp32s3/include -I/home/fracchio/esp/esp-idf/components/xtensa/include -I/home/fracchio/esp/esp-idf/components/xtensa/deprecated_include -I/home/fracchio/esp/esp-idf/components/lwip/include -I/home/fracchio/esp/esp-idf/components/lwip/include/apps -I/home/fracchio/esp/esp-idf/components/lwip/include/apps/sntp -I/home/fracchio/esp/esp-idf/components/lwip/lwip/src/include -I/home/fracchio/esp/esp-idf/components/lwip/port/include -I/home/fracchio/esp/esp-idf/components/lwip/port/freertos/include -I/home/fracchio/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/fracchio/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/fracchio/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/fracchio/esp/esp-idf/components/esp-tls -I/home/fracchio/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/fracchio/esp/esp-idf/components/mbedtls/port/include -I/home/fracchio/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/fracchio/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/fracchio/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/fracchio/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/fracchio/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/fracchio/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/mqtt_wrapper/include -I/home/fracchio/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/fracchio/esp/esp-idf/components/esp_event/include -I/home/fracchio/esp/esp-idf/components/tcp_transport/include -I/home/fracchio/esp/esp-idf/components/esp_timer/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node=. -fmacro-prefix-map=/home/fracchio/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/crypto_wrapper/CMakeFiles/__idf_crypto_wrapper.dir/crypto_wrapper.c.obj -MF esp-idf/crypto_wrapper/CMakeFiles/__idf_crypto_wrapper.dir/crypto_wrapper.c.obj.d -o esp-idf/crypto_wrapper/CMakeFiles/__idf_crypto_wrapper.dir/crypto_wrapper.c.obj -c /home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/crypto_wrapper/crypto_wrapper.c
/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/crypto_wrapper/crypto_wrapper.c: In function 'get_local_private_key':
/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/crypto_wrapper/crypto_wrapper.c:217:93: error: pointer targets in passing argument 1 of 'strlen' differ in signedness [-Werror=pointer-sign]
  217 |     int ret = mbedtls_pk_parse_key(&pk, (const unsigned char *)client_key_pem_start, strlen(client_key_pem_start) + 1, NULL, 0, NULL, 0);
      |                                                                                             ^~~~~~~~~~~~~~~~~~~~
      |                                                                                             |
      |                                                                                             const uint8_t * {aka const unsigned char *}
In file included from /home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/crypto_wrapper/crypto_wrapper.h:1,
                 from /home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/crypto_wrapper/crypto_wrapper.c:1:
/home/fracchio/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/xtensa-esp-elf/sys-include/string.h:41:18: note: expected 'const char *' but argument is of type 'const uint8_t *' {aka 'const unsigned char *'}
   41 | size_t   strlen (const char *);
      |                  ^~~~~~~~~~~~
In file included from /home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/crypto_wrapper/crypto_wrapper.h:7:
/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/mqtt_wrapper/include/mqtt_wrapper.h: At top level:
/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/mqtt_wrapper/include/mqtt_wrapper.h:187:13: warning: 'disconnect_mqtt_client' defined but not used [-Wunused-function]
  187 | static void disconnect_mqtt_client(esp_mqtt_client_handle_t client){
      |             ^~~~~~~~~~~~~~~~~~~~~~
/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/mqtt_wrapper/include/mqtt_wrapper.h:148:33: warning: 'mqtt_app_start' defined but not used [-Wunused-function]
  148 | static esp_mqtt_client_handle_t mqtt_app_start(char* broker_url, QueueHandle_t queue, char* mess){
      |                                 ^~~~~~~~~~~~~~
/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/mqtt_wrapper/include/mqtt_wrapper.h:60:12: warning: 'mqtt_get_my_messages' defined but not used [-Wunused-function]
   60 | static int mqtt_get_my_messages(esp_mqtt_client_handle_t client, char* topic){
      |            ^~~~~~~~~~~~~~~~~~~~
/home/fracchio/Scrivania/iot_network_and_protocols_project/secure_com_node/components/mqtt_wrapper/include/mqtt_wrapper.h:48:12: warning: 'mqtt_publish_message' defined but not used [-Wunused-function]
   48 | static int mqtt_publish_message(esp_mqtt_client_handle_t client, char* message, char* topic, int qos){
      |            ^~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[4/10] Completed 'bootloader'
ninja: build stopped: subcommand failed.
